tutorial url locations

--- a/public_html/dispatcher/index.html
+++ b/public_html/dispatcher/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1 class="page-header"><span class="glyphicon glyphicon-link"></span> BackboneJS Event Dispatcher Example</h1>
             <p>This example shows how to create a simple event dispatcher in BackboneJS<p>
-            <p>A full tutorial can be seen at: </p>
+            <p>A full tutorial can be seen at: <a href="http://blog.sixthpoint.com/backbonejs-utilizing-a-event-aggregator/">http://blog.sixthpoint.com/backbonejs-utilizing-a-event-aggregator/</a></p>
 
             <div id="input"></div>
             <hr/>
