--- a/public_html/socketio/index.html
+++ b/public_html/socketio/index.html
@@ -11,9 +11,9 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="page-header"><span class="glyphicon glyphicon-link"></span> BackboneJS + SocketIO client</h1>
-            <p>This example shows how to create a marry BackboneJS with SocketIO.<p>
-            <p>A full tutorial can be seen at: </p>
+            <h1 class="page-header"><span class="glyphicon glyphicon-link"></span> RequireJS + SocketIO client</h1>
+            <p>This example shows how to marry RequireJS with SocketIO.<p>
+            <p>A full tutorial can be seen at: <a href="http://blog.sixthpoint.com/socketio-using-requirejs-client-application/">http://blog.sixthpoint.com/socketio-using-requirejs-client-application/</a></p>
             <hr />
             <div id="log"></div>
         </div>
